# cell-segmentation

./: README.md  Rgui.bat  Rterminal.bat  Run_analyse.bat  Run_segmentation.bat  myfunctions.R  parameters.R  process_segmentation.R  segmentation.R  setenv.bat
dev/: build.bat
dev/DiffusionFilters/apps/image/ced/: Makefile  image_ced_LP.c
dev/DiffusionFilters/apps/image/eed/: Makefile  image_eed_LP.c
dev/DiffusionFilters/lmip/base/: comment.h  file.h  memory.h
dev/DiffusionFilters/lmip/image/: imana.h  imconv.h  imio.h  immem.h  imst.h
dev/DiffusionFilters/lmip/matrix/: mat_sym2.h  matrix.h
dev/DiffusionFilters/lmip/signal/: sigconv.h  sigmem.h
dev/DiffusionFilters/lmip/tensor2d/: ten2dconv.h  ten2dmem.h
dev/EBImage/: DESCRIPTION  NAMESPACE  configure  configure.ac
dev/EBImage/R/: Image.R  drawable.R  filter2.R  magick.R  moments.R  morphology.R  objects.R  segment.R
dev/EBImage/man/: EBImage.Rd  colorize.Rd  drawPolyline.Rd  imageConvolve.Rd  imageReplace.Rd  magickFilter.Rd  meanvar.Rd  morphology.Rd  ocontour.Rd  rmObjects.Rd  separate.Rd  watergrow.Rd
dev/EBImage/src/: watergrow.h  watershed.cpp
dev/EBImage/src-i386/: EBImage.c  drawable.c  features_moments.c  morphology.c  objects.c  objects.h  ocontour.c  propagate.cpp
dev/EBImage/src-x64/: Makevars.win  drawable.h  features_moments.h  filters_magick.c  floodFill.cpp  ocontour.h  watergrow.cpp
dev/EBImage_patch/: build.sh  changes.Rnw  proposed_modifications.diff
input_images/ACTIN/: 0.tif  1.tif  2.tif  3.tif
input_images/DAPI/: 0.tif  1.tif  2.tif  3.tif
input_images/HECD1/: 0.tif  1.tif  2.tif  3.tif
